...
                                <color key="backgroundColor" red="0.40000000000000002" green="0.20000000000000001" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="R1e-Lv-dkf"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Entrar com sua conta"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <exclude reference="PDS-2W-63q"/>
                                <exclude reference="Utm-zO-LU0"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" id="uWY-42-NzV">
                        <barButtonItem key="backBarButtonItem" title="Voltar" id="vfW-Fc-Lt6"/>
                    </navigationItem>
                    <connections>
                        <segue destination="kaf-6p-qMD" kind="show" identifier="signInSegue" id="sGs-Hd-RmG"/>
                        <segue destination="b6i-YU-n2n" kind="show" identifier="signUpSegue" id="VBr-NT-8Wf"/>
                        <segue destination="8PP-Jz-iJc" kind="show" identifier="singInWithFacebookSegue" id="Hu9-ij-AGM"/>
                    </connections>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite seu e-mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-CS-BSK" customClass="TXTAttributedStyle" customModule="PupCare" customModulePr
                                <rect key="frame" x="10" y="163" width="355" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="355" id="Zmo-GD-bHL"/>
                                    <constraint firstAttribute="height" constant="40" id="l4i-E5-3am"/>
                                </constraints>
                                <color key="textColor" red="0.23420003056526184" green="0.66735291481018066" blue="0.97718930244445801" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="Zmo-GD-bHL"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite sua senha" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N7C-dx-AH9" customClass="TXTAttributedStyle" customModule="PupCare" customModulePro
                                <rect key="frame" x="10" y="213" width="355" height="40"/>
                                <color key="textColor" red="0.23420003056526184" green="0.66735291481018066" blue="0.97718930244445801" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                <color key="backgroundColor" red="1" green="0.72549019609999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Nak-Yx-opK"/>
                                    <constraint firstAttribute="width" constant="225" id="wQf-sH-JpH"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                <state key="normal" title="Fazer login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
