...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Finalizar compra-->
        <scene sceneID="M2e-ZN-tqq">
            <objects>
                <viewController title="Finalizar compra" id="8IY-Vd-0BO" customClass="OrderResumeViewController" customModule="PupCare" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="z1D-Ha-f85"/>
                        <viewControllerLayoutGuide type="bottom" id="FCB-Jw-9FR"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="czM-yR-LwW">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
...
                                                    <rect key="frame" x="10" y="59" width="363" height="45"/>
                                                    <color key="backgroundColor" red="1" green="0.72549019609999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="45" id="9Wr-rU-L7f"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                                                    <state key="normal" title="Finalizar compra para esta Pet Shop">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="FinishPetShopOrder:" destination="oAm-tF-ePX" eventType="touchUpInside" id="ckI-LV-3Kj"/>
                                                    </connections>
                                                </button>
...
                            <constraint firstAttribute="trailingMargin" secondItem="f1C-VB-qdg" secondAttribute="trailing" constant="-20" id="0xj-u0-hLf"/>
                            <constraint firstItem="f1C-VB-qdg" firstAttribute="top" secondItem="do4-7k-VjF" secondAttribute="topMargin" id="568-SL-aeF"/>
                            <constraint firstItem="f1C-VB-qdg" firstAttribute="leading" secondItem="do4-7k-VjF" secondAttribute="leadingMargin" constant="-20" id="Bvj-WA-l37"/>
                            <constraint firstItem="Iu9-UW-Zpd" firstAttribute="top" secondItem="f1C-VB-qdg" secondAttribute="bottom" id="Ckb-S0-jIj"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Carrinho" id="xwO-K6-dcA">
                        <barButtonItem key="backBarButtonItem" title="Voltar" id="Yxo-55-yPz"/>
                        <barButtonItem key="leftBarButtonItem" title="Fechar" id="xcF-nG-bQe">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="backButton:" destination="b81-xW-eVQ" id="ggJ-0Z-Zfb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
